start application section

--- a/paper.yml
+++ b/paper.yml
@@ -20,7 +20,7 @@ authors:
 affiliations:
   - name: Massachusetts Institute of Technology
     index: 1
-  - name: Julia Computing Inc.
+  - name: Julia Computing
     index: 2
   - name: Champalimaud Centre for the Unknown
     index: 3
