--- a/paper.yml
+++ b/paper.yml
@@ -17,6 +17,8 @@ authors:
     affiliation: 2
   - name: Pietro Vertechi
     affiliation: 3
+  - name: Alan Edelman
+    affiliation: 1
 affiliations:
   - name: Massachusetts Institute of Technology
     index: 1
